--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-midnight
 title: Welcome to Tristan's homepage!
-description: Not much to see here yet but please enjoy your stay :)
+description: Not much to see here yet, but please enjoy your stay :)
